--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -382,8 +382,8 @@
 
 @article{dfoCanadaPolicyConservation2005,
   title = {Canada's {{Policy}} for {{Conservation}} of {{Wild Pacific Salmon}}},
+  author = {DFO},
   year = {2005},
-  collaborator = {DFO},
   langid = {english},
   lccn = {SH346 .C35 2005},
   keywords = {Canada,Conservation Government policy,Pacific salmon},
@@ -391,7 +391,7 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\XH8BPDZC\\Canada - 2005 - Canada's policy for conservation of wild Pacific s.pdf}
 }
 
-@techreport{dfoFisheryDecisionMakingFramework2009,
+@article{dfoFisheryDecisionMakingFramework2009,
   title = {A {{Fishery Decision-Making Framework Incorporating}} the {{Precautionary Approach}}},
   author = {DFO},
   year = {2009}
@@ -409,11 +409,12 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\5YMKZMTN\\Guidance on Assessing Threats, Ecological Risk and.pdf}
 }
 
-@techreport{dfoHarvestStrategyCompliant2006,
+@article{dfoHarvestStrategyCompliant2006,
   title = {A {{Harvest Strategy Compliant}} with the {{Precautionary Approach}}},
   author = {DFO},
   year = {2006},
-  number = {2006/023}
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+  volume = {2006/023}
 }
 
 @article{dfoIntegratedBiologicalStatus2016,
@@ -446,7 +447,7 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\5P7KAL8R\\A Management Procedure Framework for Groundfish In.pdf}
 }
 
-@techreport{dfoPolicyNewFisheries2009,
+@article{dfoPolicyNewFisheries2009,
   title = {Policy on {{New Fisheries}} for {{Forage Species}}},
   author = {DFO},
   year = {2009}
@@ -474,12 +475,12 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\KT372HJ4\\Proceedings of the National Peer Review on the Dev.pdf}
 }
 
-@techreport{dfoProceedingsNationalWorkshop2013,
-  type = {{{DFO Canadian Science Advisory Secretariat Proceeding Series}}},
+@article{dfoProceedingsNationalWorkshop2013,
   title = {Proceedings of the {{National Workshop}} for {{Technical Expertise}} in {{Stock Assessment}} ({{TESA}}): {{Maximum Sustainable Yield}} ({{MSY}}) {{Reference Points}} and the {{Precautionary Approach}} When {{Productivity Varies}}; {{December}} 13-15, 2011},
   author = {{DFO}},
   year = {2013},
-  number = {2012/055.},
+  journal = {DFO Canadian Science Advisory Secretariat Proceedings Series},
+  volume = {2012/055},
   pages = {58},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\73BMV67Q\\Proceedings of the National Workshop for Technical.pdf}
