--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -65,7 +65,7 @@ In addition to biological reasons for assessing status at the spatial scale of C
 
 Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against for LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. At finer spatial scales, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider distribution at sub-populations within CUs when those are considered to be important for the sustainability of the CU or SMU. Identifying relevant spatial scales within CUs can be challenging due to uncertainty in meta-population dynamics and its impacts on long-term viability.
 
-Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely aligned with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are often not aligned with Conservation Units - the biological unit of conservation under DFO's WSP - and are not considered further here. Although the LRPs presented here are applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety management decisions.
+Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely aligned with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are often not aligned with Conservation Units - the biological unit of conservation under the WSP - and are not considered further here. Although the LRPs presented here are applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety of management decisions.
 
 
 
@@ -125,7 +125,7 @@ In particular, this paper has six sections:
 
 6. Discussion of uncertainties and recommendations on future research 
 
-This work was lead by a technical working group composed of DFO and First Nations analysts with expertise and knowledge associated with the biological basis of serious harm and analytical to support the development and application of candidate methods for LRPs. The technical working group was not meant to be a venue for engagement or to capture stakeholder perspectives or socioeconomic objectives. These considerations are relevant when developing management responses to stock assessments, but not in the assessment of stock status using LRPs. 
+This work was lead by a technical working group composed of DFO and First Nations analysts with expertise and knowledge associated with the biological basis of serious harm and analytical to support the development and application of candidate methods for LRPs. The technical working group was not intended to be a venue for engagement or to capture stakeholder perspectives or socioeconomic objectives. These considerations are relevant when developing management responses to stock assessments, but not in the assessment of stock status using LRPs. 
 
 
 ### Scope
@@ -144,7 +144,7 @@ Here we follow the recommendation of @holtIndicatorsStatusBenchmarks2009 to asse
 
 Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with local knowledge holders, managers and stakeholders.
 
-While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stocks provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stocks provisions is beyond our scope, and is a gap that warrants further discussion.  We highlight a few possible roles for LRPs below. We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stocks provisions.
+While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stocks provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stocks provisions is also beyond our scope, and is a gap that warrants further discussion.  We highlight a few possible roles for LRPs below. We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stocks provisions.
 
 <!--CH: Not sure is the R chunk below is necessary? If we remove, do we need to add gpplot2, knitr, bookdown, devtools to index file? Leave for now-->
 
