--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -182,10 +182,10 @@ CH: I think we've landed on an SMU is DD only if status is amber/green on data-r
 
 In order to apply proportional LRPs, a lower limit on the proportion of CUs above Red status needs to be defined. @dfoFisheryDecisionMakingFramework2009 indicates that LRPs are based on biological criteria identified by Science, independent of management processes. Given the goal of the WSP to protect the biodiversity of Pacific salmon in part by maintaining CUs above lower biological benchmarks, we have identified a threshold of 100$\%$ of CUs above the Red zone as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs are designated extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. <!--LW: question, so if a CU goes extinct it doesn't count in the 100% LRP for the SMU anymore? Wouldn't a CU going extinct represent serious harm/impaired productivity?- CH: but when it's extinct by definition it can't be recovered so a rebulidng plan is moot; unlike extirpated or critically endangered. CH: if it's extinct it cannot be rebuilt by definition. I think out goal is to  assess serious harm on extant CUs. Proof of extinction takes a long time (.e., 30-50 years under COSEWIC), so I don't think this the case for many; Until it's designated extinct it would still be considered serious harm. -->
 
-This step omits decisions about how to prioritize CUs for conservation given variability in their capacity to rebuild. For some CUs the potential for rebuilding to above the Red zone may be extremely low because of natural conditions or anthropogenic threats. For example, some CUs are naturally more vulnerable to threats because of their biological characteristics (e.g., small habitat capacities) placing them in the Red zone. However, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost. Rebuilding may also be limited due anthropogenic threats such as climate change. Recent vulnerability assessments indicate that many salmon populations will not be resilient to climate change in the coming decades [@crozierClimateVulnerabilityAssessment2019; @crozierClimateChangeThreatens2021]. These considerations should be identified in  rebuilding potential analyses to inform decisions about where resources should be allocated in a rebuilding plan [e.g., @carwardinePriorityThreatManagement2019]. Considerations on rebuilding potential should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] and are outside scope of identifying LRPs. Those analyses can then inform decisions about prioritizing CUs and management actions, with various sectors and stakeholders.
+This step omits decisions about how to prioritize CUs for conservation given variability in their capacity to rebuild. For some CUs the potential for rebuilding to above the Red zone may be extremely low because of natural conditions or anthropogenic threats. For example, some CUs are naturally more vulnerable to threats because of their biological characteristics (e.g., small habitat capacities) placing them in the Red zone. However, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost. Rebuilding may also be limited due anthropogenic threats such as climate change. Recent vulnerability assessments indicate that many salmon populations will not be resilient to climate change in the coming decades [@crozierClimateVulnerabilityAssessment2019; @crozierClimateChangeThreatens2021]. These considerations should be identified in  rebuilding potential analyses to inform decisions about where resources should be allocated in a rebuilding plan [e.g., @carwardinePriorityThreatManagement2019]. Considerations on rebuilding potential should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] and are outside the scope of identifying LRPs. Those analyses can then inform decisions about prioritizing CUs and management actions, with various sectors and stakeholders.
 
 
-Furthermore, unlike many other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers so that LRPs based on 100$\%$ of CUs being above Red status may trigger the development of rebuilding plans under Fish Stock provisions when only a component (e.g., a single CU) requires intervention that are not related to harvest (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100$\%$ of CUs within the SMU should be above their benchmarks to avoid serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales-->
+Furthermore, unlike many other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers so that LRPs based on 100$\%$ of CUs being above Red status may trigger the development of rebuilding plans under Fish Stocks provisions when only a component (e.g., a single CU) requires intervention that are not related to harvest (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100$\%$ of CUs within the SMU should be above their benchmarks to avoid serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales-->
 
 
 <!--CH: not needed??
@@ -367,16 +367,16 @@ Given, uncertainties and limitations associated with each method, application an
 &nbsp;
 **Empirical Logistic Regression LRPs**
 
-Empirical logistic regression LRPs are derived from historical time-series of the proportion of CUs above Red status, indicated by a single metric metric on spawner abundances or distribution.  
+Empirical logistic regression LRPs are derived from historical time-series of the proportion of CUs above Red status, indicated by a single metric on spawner abundances or distribution.  
 
 
 LRPs based on logistic regressions may be appropriate when the following assumptions are met:
 
-- CU assessments are derived primarily from abundances relative to benchmarks or distribution of spawners instead of time trends, or status on spawner abundances relative to benchmarks are considered a suitable approximation for what other metrics might provide. It is possible to combine two or more types of abundance-based benchmarks to assess CUs within an SMU (e.g., use both percentile and S~gen~ benchmarks to assess different CUs). Could it be said that this method is usefule?
+- CU assessments are derived primarily from abundances relative to benchmarks or distribution of spawners instead of time trends, or status on spawner abundances relative to benchmarks are considered a suitable approximation. It is possible to combine two or more types of abundance-based benchmarks to assess CUs within an SMU (e.g., use both percentile and S~gen~ benchmarks to assess different CUs). 
 
-- As required for proportional-based benchmarks, data-deficient CUs meet criteria outlined in Step 3 such that their status can be represented by CUs with data. 
+- As required for proportional LRPs, data-deficient CUs meet criteria outlined in Step 3 such that their status can be represented by CUs with data. 
 
-- Time-series of the proportion of CUs above the lower benchmark contain contrast such that all CUs are above their lower benchmark in at least one year and at least 1 CU is below its lower benchmark in at least one year. <!--CW: I suspect we would not get the model to converge if there was only one year with one of the outcomes, could we change it to a few:
+- Time-series of the proportion of CUs above the lower benchmark contain contrast such that all CUs are above their lower benchmark in at least one year and at least one CU is below its lower benchmark in at least one year. <!--CW: I suspect we would not get the model to converge if there was only one year with one of the outcomes, could we change it to a few:
  Time-series of the proportion of CUs above the lower benchmark contain contrast such that all CUs are above their lower benchmark in a few years and at least 1 CU is below its lower benchmark in a few years.
  
 CH: you're probably right, but I'm unsure how much afew is, and wonder if some (possibly rare) case having one year might work..?
