added new line space in WCVI chapter

--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -27,7 +27,7 @@ Within this principle, it is recognized that science is not static and new findi
 Similarly, best practices, or practices that have been demonstrated to work well can be used to inform reference points, as defined by @sainsburyBestPracticeReference2008. The ‘best practice’ concept is based on the best practice that has been demonstrated through use, and recognizes that views of what is ‘best’ will continuously improve with experience. Best practice is not an absolute or fixed entity, or a guarantee of adequacy. It is based on experience to date and it is expected to evolve over time" [@sainsburyBestPracticeReference2008].
 
 
-**Principle 2**. LRPs should be consistent with the goal of avoiding serious harm to the SMU, as described in @dfoFisheryDecisionMakingFramework2009 and Section \@ref(intro). The LRP should be set above where serious harm occurs and should avoid long-term losses that may accompany such undesirable states, such as those associated with fishing and ecosystem components [@dfoFisheryDecisionMakingFramework2009], e.g.,  supporting dependent predators [@dfoPolicyNewFisheries2009]. In addition, LRPs should be representative of the entire SMU, including scenarios where components of the SMU (e.g., CUs) are thought to represent the SMU (see Section \@ref(guidelines)). <!--CH: I have added this last sentence to align with Marentette et al. principle 2, below. However, it does sound a little awkward here.-->
+**Principle 2**. LRPs should be consistent with the goal of avoiding serious harm to the SMU, as described in @dfoFisheryDecisionMakingFramework2009 and Section \@ref(intro). The LRP should be set above where serious harm occurs and should avoid long-term losses that may accompany such undesirable states, such as those associated with fishing and ecosystem components, e.g., supporting dependent predators [@dfoFisheryDecisionMakingFramework2009; @dfoPolicyNewFisheries2009]. In addition, LRPs should be representative of the entire SMU, including scenarios where components of the SMU (e.g., CUs) are thought to represent the SMU (see Section \@ref(guidelines)). <!--CH: I have added this last sentence to align with Marentette et al. principle 2, below. However, it does sound a little awkward here.-->
 
 <!--Marentette et al Principle 2:
 2.1	Indicators and LRPs should be at minimum conceptually linked to one or more interpretations of serious harm such as impaired recruitment, productivity, resilience or ability to recover from perturbation.  
@@ -38,7 +38,7 @@ Similarly, best practices, or practices that have been demonstrated to work well
 
 <!--CH to consider further emphasizing possibility of using TK for identifying LRPs in other places in this WP?-->
 
-**Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of the SMUs. Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases.  LRPs should also be communicable to managers and stakeholders in a way that inform decisions at time-scales relevant to management. Other operational considerations are cost-effectiveness and simplicity in understanding. 
+**Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of fisheries on SMUs. Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases.  Also, it is beneficial if LRPs are easy to communicate to managers, First Nations, and stakeholders in a way that inform decisions at time-scales relevant to management. Other operational considerations are cost-effectiveness and simplicity in understanding. 
 
 <!-- CW: How is this different from the previous principle, "based on best available information" I suggest we leave this principle with just the relevant to the policy and easy to communicate (although I think that "easy" is debatable, I would not say that Sgen and SPR40 are easy to communicate, I don't think most people understand them, but they can be used to inform decisions) 
 CH: this idea of 'feasible to calculate' came from Julie's recap at the TESA workshop where she mentioned how participants interpreted 'operational'. I'd prefer to leave in for now, but can take out in a later draft.
@@ -102,7 +102,7 @@ Principle 5: When selecting from multiple alternatives, the choice of stock stat
 &nbsp;
 **Applying the principles to LRP development**
 
-Our goal is to provide overall guidelines on LRP development following the principles listed above while providing flexibility due to differences in local biological characteristics, data qualities and data quantities, among salmon stocks. We demonstrate the extent to which candidate LRP methods proposed here are aligned with these principles. Alternative LRP methods, aligned with these key principles, may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
+Our goal is to provide overall guidelines on LRP development following the principles listed above while providing flexibility due to differences in biological characteristics and data types, qualities and quantities among Pacific salmon species and SMUs. We demonstrate the extent to which candidate LRP methods proposed here are aligned with these principles. Alternative LRP methods, aligned with these key principles, may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
 
 In the next section, methods for estimating CU status are described, as implemented in previous status assessments under the WSP. Candidate LRPs that integrate CU statuses are then proposed, falling into two categories: those based on the proportion of component CUs above the Red zone called proportional LRPs, and those based on aggregate abundances, called aggregate abundance LRPs.  A more detailed description of LRPs with technical details is included in Holt et al. (In review). Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). 
 
