--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -23,7 +23,7 @@
 
 Uncertainties in CU-level benchmarks affect both proportional and aggregate abundance LRPs, and arise because of observation errors in underlying data, estimation uncertainty in benchmarks, and structural uncertainties in model forms. Each of these three sources of uncertainty in benchmarks are described here. 
 
-First, observations errors in spawner abundances, the proportion of hatchery-origin spawners, catches, stock assignment of catches, and ages-at-maturity can result in data uncertainties, which may impact estimates of recruitment in 'run reconstructions' and assessment of status. In particular, the impact of hatchery enhancement on spawner and recruitment time-series is a key uncertainty due to the low rates of marking among hatcheries and sampling on the spawning grounds. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatchery enhancement can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], but are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin hatchery facilities and those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic introgression from strays would help address these uncertainties.  Further, for stocks that are not dominated by hatchery production, the decision to exclude the contribution of hatchery-origin fish from time-series of spawner abundances where possible assumes that these fish do not contribute to assessment and resulting management of wild salmon, as in previous WSP assessments [e.g., @dfoWildSalmonPolicy2015], despite their possible contribution to conservation and rebuilding objectives, and ecosystem services in general. A review and evaluation of objectives for integrated-transition and integrated-wild populations (with PNI  $\geqslant$ 0.5), and the appropriate data on which to base assessments was beyond the scope of this project. 
+First, observations errors in spawner abundances, the proportion of hatchery-origin spawners, catches, stock assignment of catches, and ages-at-maturity can result in data uncertainties, which may impact estimates of recruitment in 'run reconstructions' and assessment of status. In particular, the impact of hatcheries on spawner and recruitment time-series is a key uncertainty due to the low rates of marking among hatcheries and sampling on the spawning grounds. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatcheries can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], but are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin hatchery facilities and those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic introgression from strays would help address these uncertainties.  Further, for stocks that are not dominated by hatchery production, the decision to exclude the contribution of hatchery-origin fish from time-series of spawner abundances where possible assumes that these fish do not contribute to assessment and resulting management of wild salmon, as in previous WSP assessments [e.g., @dfoWildSalmonPolicy2015], despite their possible contribution to conservation and rebuilding objectives, and ecosystem services in general. A review and evaluation of objectives for integrated-transition and integrated-wild populations (with PNI  $\geqslant$ 0.5), and the appropriate data on which to base assessments was beyond the scope of this project. 
 
 
 
@@ -59,7 +59,7 @@ Uncertainties in status derived from proportional LRPs can arise from the exclus
 For logistic regression LRPs, uncertainties can arise from statistical estimation of the stock-recruitment and logistic models. We provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both. 
 The estimation of the logistic regression model can be statistically integrated with the estimation of the underlying spawner-recruitment based benchmarks. This statistical integration allow uncertainties to be propagated from CU-level benchmarks to SMU-level LRPs.
 
-Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity among CUs has diverged, or if the covariance in population dynamics has changed due to other natural or anthropogenic factors.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
+Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity among CUs has diverged, or if the covariance in population dynamics has changed due to other natural or anthropogenic factors. In some cases, covariance among CUs may be driven by synchronous trends in hatchery enhancement creating misleading and possibly biased LRP estimates.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
 
 Furthermore, uncertainties in both aggregate abundances LRPs (logistic regression and projection LRPs) can arise because these LRPs are derived CU status on a single metric as a proxy for status on multiple dimensions. In some cases, these statuses may diverge because  of additional metrics considered and the generational smoothed time-series used to assess current status in the multidimensional approach (as implemented by the Salmon Scanner). Further details are described in Section \@ref(guidelines). 
 
