--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -2,27 +2,27 @@
 
 LRP methods require assessments of status at the scale of CUs. Abundance data required for CU assessments are sometimes influenced by hatchery enhancement, which requires additional considerations. This section includes methods to account for hatchery enhancement in status assessments, estimate CU-level statuses, and estimate LRPs based on either the proportion of CUs with status above the Red zone or aggregate abundances to the SMU. 
 
-## CONTRIBUTION OF ENHANCEMENT
+## CONTRIBUTION OF HATCHERIES
 
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
 \item Hatcheries can reduce wild genetic diversity and fitness and are considered a risk factor for the long-term persistence of CUs
 \item Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and are not usually included in assessments of biological status
-\item Following previous Science guidance, we recommend including only populations without significant enhancement in analyses of biological status under the WSP
+\item Following previous Science guidance, we recommend including only populations without significant influence from hatcheries in analyses of biological status under the WSP
 \item The data used to assess the contribution of hatcheries to spawning are associated with high uncertainties, due to the tagging method, sampling rates, uncertainty in survival of natural vs. hatchery-origin fish, and observation errors
 \item Populations dominated by wild fish but influenced by hatchery stays (called 'wild stray-influenced' populations) are generally included in CU assessments, but these out-of-basin strays may bias estimates of natural production and resulting assessments, representing a source of uncertainty
-\item Following previous WSP status assessments, when data are available, the demographic influence of hatchery production are removed from time-series of abundances. This step applies to populations included in analyses, after removing highly enhanced populations. Where data to differentiate hatchery- from natural-origin spawners are not available, total spawner abundances include hatchery contributions, representing an additional source of uncertainty
+\item Following previous WSP status assessments, when data are available, the demographic influence of hatchery production are removed from time-series of abundances. This step applies to populations included in analyses, after removing populations with high hatchery influence. Where data to differentiate hatchery- from natural-origin spawners are not available, total spawner abundances include hatchery contributions, representing an additional source of uncertainty
 \end{itemize}
 \end{tcolorbox}
 
-Hatcheries contribute to spawning abundances of many salmon stocks and can be used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and fitness defined as adult-to-adult reproductive success, and is considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and typically only populations dominated by wild salmon are included in assessments of biological status. However separating out the influence of hatchery enhancement in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are not usually marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003] do not have biological sampling programs to collect mark and tag data from individual salmon. 
+Hatcheries contribute to spawning abundances of many salmon stocks and can be used as a conservation tool and to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness defined as adult-to-adult reproductive success, and is considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin and their progeny are not considered "wild" under the Wild Salmon Policy and typically only populations dominated by wild salmon are included in assessments of biological status. However separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are not often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003] do not have biological sampling programs to collect mark and tag data from individual salmon. 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
 &nbsp;
 **Accounting for genetic risk of hatchery production**
 
-Following @withlerGeneticallyBasedTargets2018, we recommend including only populations without significant enhancement in analyses of CU and SMU biological status consistent with the WSP. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values $<$ 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and $<$ 0.72 indicating integrated-transition where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. While these guidelines were proposed for Chinook Salmon where hatchery enhancement is most common, they are also applicable to other salmon species [@withlerGeneticallyBasedTargets2018]. 
+Following @withlerGeneticallyBasedTargets2018, we recommend including only populations without significant hatchery enhancement in analyses of CU and SMU biological status consistent with the WSP. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values $<$ 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and $<$ 0.72 indicating integrated-transition where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. While these guidelines were proposed for Chinook Salmon where hatchery enhancement is most common, they are also applicable to other salmon species [@withlerGeneticallyBasedTargets2018]. 
 
 
 
@@ -44,10 +44,10 @@ In addition, @withlerGeneticallyBasedTargets2018 recommend that populations domi
 &nbsp;
 **Removing demographic influence of hatchery production**
 
-For integrated-transition and integrated-wild populations, WSP assessments of status have generally removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of stock status. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that these fish reproduce successfully in the wild and contribute to natural production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current metric of stock status, the contribution of hatchery-origin fish is removed from spawner time-series to remove the influence of variability in annual production from hatcheries on current status [@dfoWildSalmonPolicy2015].
+For integrated-transition and integrated-wild populations, in some cases WSP assessments have removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish or other data on the relative survival of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of stock status. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that these fish reproduce successfully in the wild and contribute to natural production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current metric of stock status, the contribution of hatchery-origin fish is removed from spawner time-series to remove the influence of variability in annual production from hatcheries on current status [@dfoWildSalmonPolicy2015].
 
 
-In some cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be at least predominantly hatchery origin (e.g., PNI $\geqslant$ 0.5)[e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016]. In these cases, there may be risks that current status reflects hatchery production which masks changes in natural production production and obscures inferences for unenhanced populations in the CU. These risks are partly mediated but not dismissed by removing populations that are dominated by hatchery-origin fish from assessments.
+In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5)[e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016]. In these cases, there may a risk of current status reflecting hatchery production which masks changes in natural production production and obscures inferences for unenhanced populations in the CU. This risk is partly mediated but not dismissed by removing populations that are dominated by hatchery-origin fish from assessments.
 
 
 
@@ -72,7 +72,7 @@ In some cases where hatchery-origin fish are not marked or sampled on the spawni
 
 
 
-To be consistent with the multidimensional approach to WSP status assessments described in @holtIndicatorsStatusBenchmarks2009, we recommend that CU-level status consider multiple metrics, either integrated through formal status assessments [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016] or through the Pacific Salmon Status Scanner (Pestal et al. In prep.). By using multiple metrics (Table \@ref(tab:SSmetrics)), the Salmon Scanner allows for the assessment of status across a wide range of data availabilities. When data for a single metric are not available other metrics can be used to inform status. Therefore, the Salmon Scanner can provide assessments under data limitations, and methods to account for resulting uncertainties from data limitations are currently being integrated into the Scanner.  
+To be consistent with the multidimensional approach to WSP status assessments described in @holtIndicatorsStatusBenchmarks2009, we recommend that CU-level status consider multiple metrics, either integrated through formal status assessments [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016] or through the Pacific Salmon Status Scanner (Pestal et al. In prep.). By using multiple metrics (Table \@ref(tab:SSmetrics)), the Salmon Scanner allows for the assessment of status across a wide range of data availabilities. When data for a single metric are not available, other metrics can be used to inform status. Therefore, the Salmon Scanner can provide assessments under data limitations, and methods to account for resulting uncertainties from data limitations are currently being integrated into the Scanner.  
 
 \renewcommand*{\arraystretch}{1.4}
 \begin{table}[!htbp]
@@ -139,7 +139,7 @@ Proportion-based or proportional LRPs are calculated from the proportion of CUs 
 
 Proportional LRPs are based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer-reviewed WSP status assessments or the Pacific Salmon Status Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. Proportional LRPs represent serious harm (Principle 2) as indicated by the status of any one component CU being in the Red zone under the WSP, given that the deterioration of stock structure can itself be a form of serious harm. Proportional LRPs are operational (Principle 3) as they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, proportional LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU-level benchmarks and statuses, to LRPs and SMU statuses (Principle 5).  Proportional LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
 
-A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed. For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide of 2019.  
+A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed. For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide reported in 2019.  
 
 
 In addition to proportional LRPs, we developed LRPs based on aggregate SMU-level abundance accounting for component CU-level statuses. These "aggregate abundance LRPs" may be required for fisheries management decisions at the SMU scale, but are considered supplemental to proportional LRPs for FSP purposes. We identified two types of aggregate abundance LRPs: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Fig. \@ref(fig:LRP-types)).  Both LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  Also, both LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
@@ -183,7 +183,7 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
   (\#eq:logisticLRP)
 \end{equation}
 
-An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels associated with being more likely than not, likely, very likely, and virtually certain as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010]. We recommend that positioning LRPs as thresholds with at least a 50% probability of all component CUs being above Red status, but do not recommend a specific probability level above that, and instead demonstrate various choices. Although LRPs are intended to be identified by Science to represent the best scientific estimate of level below which serious harm occurs [@dfoScienceAdvicePrecautionary2021] without necessarily introducing additional precaution under uncertainty <!--ref? CH: I realize this would benefit from a reference, but all I have is Rob Kronlund pers. comm....-->, there is no scientific basis to choose one probability over others. 
+An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels above which probabilities are more likely than not, likely, very likely, and virtually certain as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010]. @mastrandreaGuidanceNoteLead2010 also highlight the range 33%-66% as being as likely as not, encompassing probabilities slightly above even (50%-66%). We recommend that positioning LRPs as thresholds with at least a 50% probability of all component CUs being above Red status, but do not recommend a specific probability level above that, and instead demonstrate various choices. Although LRPs are intended to be identified by Science to represent the best scientific estimate of level below which serious harm occurs [@dfoScienceAdvicePrecautionary2021] without necessarily introducing additional precaution under uncertainty <!--ref? CH: I realize this would benefit from a reference, but all I have is Rob Kronlund pers. comm....-->, there is no scientific basis to choose one probability over others. 
 
 <!-- 
 Also, based on the IUCN probability categories in case studies paper section 2.3, wouldn't we at least recommend that a probability over 50% be chosen, since 50% is 'as likely as not'? Wouldn't the precautionary principle lead us to recommend at least something in the 'likely' category >66%? This would be informed by the precautionary approach, and http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf.  I find it hard to justify the statement that there is no scientific basis to choose one probability over the others, since we have other guidance to go on. Additionally, the idea that the LRP should be above the level where serious harm is occurring makes me think that something at least in the likely category, if not the 90% very likely category, be recommended.
@@ -226,13 +226,13 @@ Reliability of estimation (Principle 4) depends on the reliability of underlying
 
 Similar to logistic regression LRPs, projection LRPs rely on an underlying relationship between aggregate abundances and status of component CUs to identify an LRP based on aggregate abundance. However, unlike logistic regression LRPs, for projection LRPs the aggregate abundances where there is a high probability of all CUs being above their lower benchmark is identified from projections instead of historical data.   
 
-The projection LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in recruitment and ages-at-maturity under current exploitation rates characterized with annual implementation uncertainty. Projections are run over an initialization period to remove the impacts of initial conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). We developed projection LRPs for SMUs that are managed under constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As for logistic regression LRPs, status was estimated from a single metric rather than the Salmon Scanner because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Scanner.
+The projection LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in recruitment and ages-at-maturity under current exploitation rates characterized with annual implementation uncertainty. Projections are run over an initialization period to remove the impacts of initial conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). We developed projection LRPs for SMUs that are managed under constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As was done for logistic regression LRPs, status was estimated from a single metric rather than the Salmon Scanner because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Scanner.
 
 One advantage of the approach for projection LRPs over logistic regression LRPs is that it allows for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression LRPs, this method is not limited by historical data on CU status. To implement projection LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (In review) and provided online (see Appendix \@ref(app:links)).  
 
 After providing parameter distributions describing the CU-level population dynamics and exploitation to samSim, the projections included four main steps:
 
-1. Project spawner abundances forward for 30 years after an initialization period and over $nTrial$ stochastic simulations, where $nTrials$ was chosen to stabilize results.
+1. Project spawner abundances forward for 30 years after an initialization period and over $nTrial$ stochastic simulations, where $nTrials$ was chosen to stabilize results. In preliminary analyses, we projected over 100 years and found similar results. 
    
 2. For each simulated year-trial combination after initialization, characterize abundances as follows:
 
@@ -259,7 +259,7 @@ Also, similar to logistic regression based LRPs, structural uncertainty in under
 \
 &nbsp;
 *Alignment with LRP Principles*
-As for logistic regression LRPs, projection LRPs use only one metric of annual estimates of spawner abundances, and therefore do not use the best available information (Principle 1) when CUs statuses rely on other metrics, such as trends in data-limited contexts. Also similar to logistic regression LRPs, projection LRPs represent levels above serious harm (Principle 2) as indicated by status of any one CU being in the Red zone under the WSP, given the projection-based relationship between aggregate abundances and probability of all CUs being above their lower benchmark. 
+As for logistic regression LRPs, projection LRPs use only one metric of annual estimates of spawner abundances, and therefore do not use the best available information (Principle 1) when CU statuses rely on other metrics, such as trends in data-limited contexts. Also similar to logistic regression LRPs, projection LRPs represent levels above serious harm (Principle 2) as indicated by status of any one CU being in the Red zone under the WSP, given the projection-based relationship between aggregate abundances and probability of all CUs being above their lower benchmark. 
 
 As for logistic regression LRPs, projection LRPs are operational (Principle 3) when harvest management occurs at the aggregate level and requires an aggregate abundance LRP to inform decisions. However, these LRPs are more difficult to communicate being derived from projections under assumptions of equilibrium, and they require the choice of probability of all CUs being above their lower benchmarks which may be difficult to choose and justify. <!--CH moved to CH6 of case study paper to simplify text here, and b/c showing the sensitivity to ER actually makes this methods more useful/operational, not less, at least according to Wilf. "Furthermore, projection LRPs are sensitive to exploitation rates, being higher under high exploitation rates and vice versa. Therefore an projection LRP developed under current exploitation cannot be used as a basis for evaluating alternative management procedures. However demonstrating the changes in aggregate abundances required for all CUs to be above lower benchmarks (i.e. changes in projection LRP) under different exploitation scenarios may help analysts and managers understand the implications of changing exploitation rates on the ability to achieve WSP objectives."--> Reliability of estimation (Principle 4) depends on the underlying parameter distributions and model structure capturing the plausible range of true underlying dynamics.<!--Reliability of LRP estimates depends on the reliability of underlying model parameters and structure. --> As for logistic regression LRPs, uncertainties can be propagated from CU-level benchmarks and status to LRPs (Principle 5). But unlike logistic regression LRPs, this method can integrate plausible ranges of parameter and structural uncertainties that may differ from those observed historically. Similar to logistic regression LRPs, projection LRPs are aligned with Principle 6 to the extent that aggregate abundances are a reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from multidimensional approach recommended under the WSP.
 
