--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -53,7 +53,7 @@ KH: have moved
 
 ## INTERIOR FRASER RIVER COHO
 
-The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status.  
+The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hells Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status.  
 
 We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2000 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion and logistic regression LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection regression LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.56 (Figure \@ref(fig:density-cor-plot)).
 
@@ -82,7 +82,7 @@ ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) + xlim(-1,1
 ```
 
 
-We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we apply the other two approaches (2) and (3) to support the development aggregate abundance LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide logistic regression and projection regression LRPs for demonstration purposes.
+We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we apply the other two approaches (2) and (3) to support the development aggregate abundance LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide logistic regression and projection regression LRPs for demonstration purposes. Fisheries on Interior Fraser Coho are managed under a bilateral Canada/US management regime, detailed in Annex IV Chapter 5 of the Pacific Salmon Treaty. 
 
 For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analysis where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses on structural assumptions about stock-recruitment relationship when deriving CU-level benchmarks for all proportion and aggregate abundance-based LRP methods.
 
@@ -93,7 +93,7 @@ For this case study, we further demonstrated the approach of averaging over stru
 ## WEST COAST VANCOUVER ISLAND CHINOOK
 
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicator stocks, which are stocks with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is an substantial component of many of these stocks and only escapement indicator stocks without significant enhancement (PNI $\geqslant$ 0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
+The West Coast of Vancouver Island (WCVI) Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicator stocks distributed across the 7 inlets and 3 CUs. Escapement indicator stocks are those with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is an substantial component of many of these stocks, however, only escapement indicator stocks without significant hatchery enhancement (PNI $\geqslant$ 0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
 
 
 Under the WSP, CUs are identified at a spatial scale to conserve for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these locations.
@@ -103,7 +103,7 @@ Two of the 3 CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assesse
 
 Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to inlets of WCVI Chinook. 
 
-We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportional LRPs and projection regression LRPs. Based on CU-level assessments, there were no years in historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection regression LRPs for demonstration purposes. We implemented sensitivity analyses on projection regression LRPs to two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in productivity, and capacity are provided in an Appendix to Holt et al. in (review).
+We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportional LRPs and projection regression LRPs. Based on CU-level assessments, there were no years in historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection regression LRPs for demonstration purposes. Fisheries are managed based a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection regression LRPs to two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in productivity, and capacity are provided in an Appendix to Holt et al. in (review).
 
 In this case study, we found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection regression LRPs were also highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) from this value resulted in large changes in LRPs estimates. 
 
